# BaseLayer

./: CMakeLists.txt  README.md
include/: base.h  base_layer.h  defines.h  ds.h  mem.h  opt.h  os.h  rc.h  str.h  utl.h
include/opt/: ir.h  json.h  lex.h
src/: ds.c  mem.c  opt.c  os.c  rc.c  str.c  utl.c
src/opt/: ir.c  json.c  lex.c
src/os/: linux_os.c  mac_os.c  unix_os.c  win_os.c
